@@ -1,4 +1,4 @@
-## Copyright (C) 2003-2012, 2014-2015, 2017 Free Software Foundation, Inc.
+## Copyright (C) 2003-2012, 2014-2015, 2017-2018 Free Software Foundation, Inc.
 ## Written by Keisuke Nishida, Roger While, Simon Sobisch
 ##
 ## This file is part of GnuCOBOL.
@@ -144,7 +144,7 @@ AT_DATA([prog2.cob], [
        01 X             PIC X(4) VALUE "abcd".
        01 I             PIC 9 VALUE 5.
        PROCEDURE        DIVISION.
-           DISPLAY X(I:5) NO ADVANCING
+           DISPLAY X(I:1) NO ADVANCING
            END-DISPLAY.
            STOP RUN.
 ])
